All logic works well for desktop, next step is to implement lightbox and then make it responsive

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -83,6 +83,11 @@
     cursor: pointer;
 }
 
+.profile__logo:hover {
+    border: 1px solid var(--Orange);
+    border-radius: 50%;
+}
+
 .hide__cart {
     display: none;
 }
